<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FormFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="20dip"
                android:orientation="horizontal"
                android:id="@+id/date_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

                <Button
                    android:id="@+id/date_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:id="@+id/date_text"
                    android:layout_marginLeft="15dip" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dip"
                android:orientation="horizontal"
                android:id="@+id/name_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/name_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="100dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_text"
                    android:paddingLeft="15dip" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dip"
                android:orientation="horizontal"
                android:id="@+id/time_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />

                <Button
                    android:id="@+id/time_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_time" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/time_text"
                    android:paddingLeft="15dip" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dip"
                android:orientation="horizontal"
                android:id="@+id/food_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_food" />

                <Spinner
                    android:id="@+id/food_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dip"
                android:orientation="horizontal"
                android:id="@+id/number_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_number" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/number_btn"
                    android:text="@string/select_number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/number_text"
                    android:paddingLeft="5dip" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/save"
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</FrameLayout>
